# zem-terminal-api

./: .tool-versions  README.md  pyproject.toml  requirements.txt
.github/workflows/: main_zem-terminal-api.yml
app/: main.py  test_db_conn.py
