[tool.poetry]
name = "zem-terminal-api"
version = "0.0.1"
description = "zem terminal api service"
authors = ["Yuxiang Li"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.30.6"
gunicorn = "^23.0.0"
h11 = "^0.14.0"
fastapi = "^0.110.0"


[tool.poetry.group.app.dependencies]
fastapi = {version = "0.110.0", extras = ["all"]}
h11 = "^0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
